Create the userdev json.